--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@
 # If you want to see the full configuration, please check `full-config.toml` .
 # And see https://gohugo.io/getting-started/configuration/ .
 
-baseURL = "https://groficastanicevska.github.io/blog/"
+baseURL = "https://groficastanicevska.github.io/mysite/"
 publishDir = "docs"
 title = "Jane - A super concise theme for Hugo"
 enableRobotsTXT = true
